2006-05-08  John Harper  <jsh@unfactored.org>

	* sawmill.h: frame x/y should be signed (from Yoshiaki Kasahara)

2005-06-26  Philip Langdale <philipl@mail.utexas.edu>

	* sawmill.h: Add StructureNotify to the root window event mask.

	* events.c (configure_notify): Add a configure-notify-hook and
	emit it on the expected occasions. Respond to configureNotify
	events on the root window by calling into Xrandr (if the
	extension is available) and updating the cached screen 	size
	and xinerama information.

	* functions.c, sawmill_subrs.h (update_xinerama_info): Refactor
	xinerama discovery into a separate function so it can be called
	on Xrandr screen size change events.

2005-02-11  John Harper  <jsh@unfactored.org>

	* windows.c (Fwindow_frame_id): new function to return the
	window id of the window's frame (adapted from patch from Philip
	Langdale <philipl@mail.utexas.edu>)

	* frames.c (list_frame_generator): integrated patch from Amit
	Gurdasani <amitg@alumni.cmu.edu> to detect windows with ARGB
	visuals and use that for the frame window as well

2005-02-06  John Harper  <jsh@unfactored.org>

	* functions.c (Fsync_server): added optional arg WAIT (when
	true, calls Xsync not XFlush)

2005-01-04  John Harper  <jsh@unfactored.org>

	* sawmill_subrs.h, main.c, display.c: cleaned up some global
	variables

	* x.c, windows.c, selection.c, images.c, frames.c, events.c:
	fix compiler warnings

	* events.c (property_notify): handle STRING properties through
	the XmbTextPropertyToTextList () function, needed to convert
	from Latin-1 to current locale (patch from Jean-Christophe
	Dubacq <jean-christophe.dubacq@ens-lyon.org> via Christian
	Marillat)

2004-11-15  John Harper  <jsh@unfactored.org>

	* keys.c: applied patch from Tuukka.Hastrup@iki.fi to support
	buttons 8 and 9

2004-10-17  John Harper  <jsh@unfactored.org>

	* fonts.c (Fget_font_typed): fix typo when checking for match
	with existing font objects (from rbasch@mit.edu, #155334)
