@@ -1,3 +1,8 @@
+2006-05-15  John Harper  <jsh@unfactored.org>
+
+	* frames.c, events.c: merged changes from Philip Langdale to
+	propagate input shape of client window to frame
+
 2006-05-08  John Harper  <jsh@unfactored.org>
 
 	* sawmill.h: frame x/y should be signed (from Yoshiaki Kasahara)
